objects/Contact_Stage_History_Contact__c/Contact_Stage_History_Contact__c.object-meta.xml
<CustomObject>
    <description>Captures the Contact Stage history for all Contacts, throughout the entire lifecycle of the Contact. Jira ticket SS-12156</description>
    <label>Contact Stage History (Contact)</label>
    <nameField>
        <displayFormat>CSHC-{0000000}</displayFormat>
        <label>Contact Stage History (Contact) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Stage Histories (Contact)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>