objects/Contact_Stage_History_Contact__c/fields/New_Contact_Stage__c.field-meta.xml
<CustomField>
    <fullName>New_Contact_Stage__c</fullName>
    <description>The Contact Stage value. Jira ticket SS-12158</description>
    <inlineHelpText>The Contact Stage value.</inlineHelpText>
    <label>New Contact Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>