objects/Contact_Stage_History_Contact__c/fields/Stage_Entry_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entry_DateTime__c</fullName>
    <description>The Date and Time that the record entered the Contact Stage. Jira ticket   SS-12159</description>
    <inlineHelpText>The Date and Time that the record entered the Contact Stage.</inlineHelpText>
    <label>Stage Entry DateTime</label>
    <type>DateTime</type>
</CustomField>